# scholarwander

./: CLASSES.md  CONTRIBUTING.md  Cargo.toml  ClassesToDocument.fods  README.md  gaiaaa_diagram.mdj  gaiaaa_diagram.xmi  moralcode_diagram.xmi
docs/: cloudconfig.md  designdecisions.md  sso.md
src/: cloudconfig.rs  embeddedbrowser.rs  main.rs  tests.rs  utils.rs
