[package]
name = "scholarwander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
keyring = "2.0.4"
openssl = "0.10.55"
serde-xml-rs = "0.6.0"
serde = "1.0.171"
serde_path_to_error = "0.1"
serde_repr = "0.1"
oauth2 = "4.4.1"
